I added a repository with the last working version of SPSA in 'DERNIERE_VERSION_VALIDE'

--- a/SPSA_lib/README
+++ b/SPSA_lib/README
@@ -5,3 +5,5 @@ Ici on stocke les codes qui ont directement trait aux libraires de la SPSA.
 Pour toute question email à gkoenig.lamon@gmail.com
 
 Dernière modification le 02/07/2018 à 16:00
+
+Dernière modification : Ajout de Object_SPSA_02_07_Adaptative_v2 comme dernière version fonctionnelle de la SPSA le 03/07/2018 à 17:00
