--- a/SCRIPTS/README
+++ b/SCRIPTS/README
@@ -2,6 +2,8 @@ Hello ! Ici on met les scripts relatifs à la SPSA et à ses tests.
 
 J'y ai placé mon premier essai de SPSA avec mon module Serpent de Mer. C'est un exemple que j'ai donné, cependant le module de SPSA dispose de possibilités supplémentaires.
 
+J'ai placé un exemple de script de comparaisons entre différentes versions de la SPSA.
+
 Pour toute question : gkoenig.lamon@gmail.com
 
-Dernière modification le 02/07/2018 à 16:00
+Dernière modification le 09/07/2018 à 14:00
