Ajout de script de test avec visualisation de chemin suivi sur différentes fonctions données (Rastrigin, Ackley,Rosenbrock et sphère). Modifications pour enregistrer le vecteur de paramètres lors des différentes estimations de la SPSA

--- a/SCRIPTS/README
+++ b/SCRIPTS/README
@@ -7,3 +7,5 @@ J'ai placé un exemple de script de comparaisons entre différentes versions de 
 Pour toute question : gkoenig.lamon@gmail.com
 
 Dernière modification le 10/07/2018 à 18:25
+
+                      le 13/07/2018 à 11:30  : Scripts pour des fonctions de cout en 2D avec visualisation
