--- a/SPSA_lib/README
+++ b/SPSA_lib/README
@@ -7,3 +7,5 @@ Pour toute question email à gkoenig.lamon@gmail.com
 Dernière modification : Ajout de Object_SPSA_02_07_Adaptative_v2 comme dernière version fonctionnelle de la SPSA le 03/07/2018 à 17:00
  
                         Ajout de Object_SPSA_godd_version_10_07 comme version pour le script utilisant différentes fonctions de cout. Le 10/07/2018 à 18:30
+
+                        Ajout de Object_SPSA_Modified_version_12_07 comme version pour le script utilisant les différentes fonctions de cout et dessinant celles-ci. Le 13/07/2018 à11:30
